# infrawatch

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  deploy-production.yml  deploy-staging.yml  frontend-ci.yml  workers-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: websocket.py
backend/app/api/v1/: alerts.py  auth.py  health.py  logs.py  metrics.py  router.py
backend/app/core/: __init__.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  indexes.py  init_db.py  mongodb.py
backend/app/models/: __init__.py  alert.py  log.py  metric.py  user.py
backend/app/repositories/: __init__.py  alert_repository.py  base_repository.py  log_repository.py  metric_repository.py  user_repository.py
backend/app/schemas/: __init__.py  alert.py  common.py  log.py  metric.py  user.py
backend/app/services/: __init__.py  alert_service.py  auth_service.py  log_service.py  metric_service.py
backend/app/utils/: __init__.py  formatters.py  pagination.py  validators.py
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_health.py  test_logs.py  test_metrics.py
docs/: architecture.md  development-guide.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
nginx/: nginx.prod.conf
workers/: Dockerfile  celery_app.py  config.py  requirements.txt
(+112 files in other folders)
